development version
-------------------

----- cvs ci ------
Thu Jan 13 16:52:46 MET 2000
tobi:
- If FTSC date field is empty, it is now calculated from the
  date_written time stampe before writing a Mail to the Squish base.

----- cvs ci ------
Tue Jan 11 01:50:40 NOVT 2000
max (patch from Serguei Revtov):
- fsize() fix

----- cvs ci ------
Sat Jan  8 03:08:22 NOVT 2000
max:
- fsize() fix

----- cvs ci ------
Thu Jan  6 19:51:30 NOVT 2000                                                   
max (patch from Kolya Nesterov):
- fsize() now  works correct on *NIX systems

----- cvs ci ------
Mi  15 Dez 1999 00:46:37 CET
tobi:
- Fixed a structure packing problem with DJGPP.


smapi 1.6.2
-----------

----- cvs ci ------
Mi  15 Dez 1999 00:46:37 CET
tobi:
- Fixed serious  Y2K bug in the SMAPI. This one affects the SDM part 
  (Fido *.MSG) of the SMAPI as well as all programs that call 
  ASCII_Date_To_Binary.

	
smapi 1.6.1
-----------

----- cvs ci ------
So  12 Dez 1999 09:02:13 CET
tobi: (patch by Eduard Dulich):
- Fixed Y2K bug in the SMAPI. It does not affect Squish and Msg, but JAM, 
  and it does affect any program (no matter what storage type) that 
  explicitly calls the sc_time routine. The bug results in years 2000 
  .. 2009 being filled in as "0" .. "9" instead of "00" .. "09".

----- cvs ci ------
Tue Nov 30 22:11:00 CET 1999
sms:
- fixed some misuses of ++ in api_jam.c and api_sdm.c

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!


----- cvs ci ------
Tue Oct 19 20:22:22 CEST 1999 
mtt:
- fixed bug in cvtddate which leads to wrong date line.(Oleg)

	
The following list is the old whatsnew file. I renamed it to make it conform
with husky Styleguides.
	
The following is a list of bug fixes and new features since SMAPI 1.1.
	
SMAPI 1.2
---------

- MSGAPI32.DLL and MSGAPINT.DLL have been removed from the SMAPI archive.
